# MorAnima

./: .gitignore  Cargo.toml  README.md
android/: AndroidManifest.xml  build-apk.sh
android/java/com/moribund/moranima/: MainActivity.java
assets/: main.css
docs/: index.html
packaging/: PKGBUILD  moranima.desktop  moranima.spec
src/: app.rs  effects.rs  main.rs
